# personal-resume-server

./: .gitignore  main.py  pyproject.toml
agents/: agent.py  agent_card_config.py  agent_executor.py
chunking/: chunk_dataclass.py  resume_chunk_builder.py
developer_resource/: RESUME-INGESTION-SERVICE.md
embeddings/: azure_embedding_client.py  base.py  ollama_embedding_client.py
llm/: azure_openai_client.py  base.py  ollama_client.py
parser/: models.py  pdf_parser.py  prompts.py  resume_parser.py
resume/: output.txt
resume/json_format/: resume_v1.json
services/: resume_ingestion_services.py
store/: pgvector_store.py
