[project]
name = "personal-resume-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.25",
    "google-adk[extensions]>=1.28.1",
    "pgvector>=0.5.0",
    "psycopg2-binary>=2.9.12",
    "pymupdf>=1.28.0",
]
